Updated LoginController for each different role. Added logic for getting storages by owner id and displaying them.